Fix scrollbar

--- a/css/orden.css
+++ b/css/orden.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+	display: none;
+}
+
 #app {
 	width: 100%;
 	height: 96.2vh;
